force-app/main/default/objects/ccrz__E_PromoI18n__c/ccrz__E_PromoI18n__c.object-meta.xml
<CustomObject>
    <description>Locale-specific version of promotion.</description>
    <label>CC Promotion i18n</label>
    <nameField>
        <displayFormat>PROM-{0000}</displayFormat>
        <label>Promotion i18n Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Promotions i18n</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>