force-app/main/default/objects/ccrz__E_PromoI18n__c/fields/ccrz__AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AttachmentId__c</fullName>
    <description>If ImageSource__c is an attachment, then this field holds the Salesforce ID of the attachment. Attachments could be different based on the locale and are defined in the CC Promo Screen.</description>
    <label>AttachmentId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>