force-app/main/default/objects/ccrz__E_PromoI18n__c/fields/ccrz__ExternalLink__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ExternalLink__c</fullName>
    <description>When set AND Link Type is set to URL on the CC Promo record, then clicking this promotion will redirect to the given URL.</description>
    <inlineHelpText>External Ink</inlineHelpText>
    <label>ExternalLink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>