force-app/main/default/objects/ccrz__E_PromoI18n__c/fields/ccrz__ImageURI__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ImageURI__c</fullName>
    <description>The URI of the image. If ImageSource__c is URI then this is the HREF pointing to the image. If ImageSource__c is Static Resource then this is a relative reference inside the indicated Static Resource.</description>
    <inlineHelpText>Image URI pointing to image hosted in external site</inlineHelpText>
    <label>ImageURI</label>
    <length>128</length>
    <type>Text</type>
</CustomField>