force-app/main/default/objects/ccrz__E_PromoI18n__c/fields/ccrz__Locale__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Locale__c</fullName>
    <description>Locale that is being defined by this entry.</description>
    <inlineHelpText>Current user&apos;s locale such as en-US</inlineHelpText>
    <label>Locale</label>
    <length>128</length>
    <type>Text</type>
</CustomField>